# flowlang

./: DOCS.md  README.md  _inspect_tree.py  debug_concept_alignment.py  debug_data_chains.py  debug_maestro.py  debug_test.py  fix_indent.py  fix_indent_v2.py  flow.bat  flow.py  insight_demo.py  ir.py  lowering.py  manual_test.py  minimal.lark  requirements.txt  run_governance_manifesto.py  run_hybrid_demo.py  run_js_governance_demo.py  run_security_audit.py  run_software_factory.py  setup.py  test_minimal.py  test_out.txt  test_output.txt  test_parser.py  test_results.txt  test_results2.txt  test_results3.txt  test_results4.txt  test_results5.txt  test_results_final.txt  test_results_final2.txt  test_results_final3.txt  test_results_final4.txt  test_results_final5.txt  verify_bridge.py  verify_cfp.py  verify_conductor_professional.py  (+4 more)
.flowlang_state/: main_2026-02-05T15-18-11.041224.pkl  main_2026-02-05T16-30-34.459410.pkl  main_2026-02-05T16-30-34.461652.pkl  main_2026-02-05T16-32-03.779295.pkl  main_2026-02-05T16-32-03.782171.pkl  main_2026-02-05T16-32-43.213765.pkl  main_2026-02-05T16-32-43.221983.pkl
docs/: governance_manifesto.md  jol_studio_course.md  js_bridge_pattern.md  professional_ecosystem.md  spp_spec.md  strict_judgment.md  technical_spec.md
examples/: bridge_engineer.js  bridge_engineering.flow  bridge_judge.js  bridge_researcher.js  example1.flow  governance_manifesto.flow  (+5 more)
flowlang_core/: Cargo.toml  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_log5.txt  pyproject.toml
flowlang_core/src/: lib.rs  propagation.rs
(+81 files in other folders)
